package com.tankgame.entities.tile;

public class Tree extends Tile {
    public Tree(double x, double y, String spriteKey, boolean collidable) {
        super(x, y, spriteKey, collidable, false);
    }
}
